style: fix some laptop-size layout issues

--- a/src/styles/_base.css
+++ b/src/styles/_base.css
@@ -156,7 +156,7 @@
   html,
   body,
   #root {
-    height: 95vh;
+    height: 100vh;
     /* width: 98%; */
     margin: 0;
     padding: 0;
@@ -167,6 +167,7 @@
   #content {
     display: flex;
     flex-direction: row;
+    height: 95%;
 
     flex: 1;
   }
